#10. promote 처리 완료, 전역 예외 처리 클래스